# controller/coba.go
@@ -33,10 +33,10 @@ func Homepage(c *fiber.Ctx) error {
 	return c.JSON(ipaddr)
 }
 
-func GetPresensi(c *fiber.Ctx) error {
-	ps := cek.GetPresensiCurrentMonth(config.Ulbimongoconn)
-	return c.JSON(ps)
-}
+// func GetPresensi(c *fiber.Ctx) error {
+// 	ps := cek.GetPresensiCurrentMonth(config.Ulbimongoconn)
+// 	return c.JSON(ps)
+// }
 
 func GetKuesioner(c *fiber.Ctx) error {
 	ps := inimodule.GetKuesionerFromStatus("done", config.Ulbimongoconn, "kuesioner")
@@ -168,10 +168,10 @@ func InsertDataSurvey(c *fiber.Ctx) error {
 // @Produce json
 // @Success 200 {object} Presensi
 // @Router /presensi [get]
-func GetAllPresensi(c *fiber.Ctx) error {
-	ps := inimodullatihan.GetAllPresensi(config.Ulbimongoconn, "presensi")
-	return c.JSON(ps)
-}
+// func GetAllPresensi(c *fiber.Ctx) error {
+// 	ps := inimodullatihan.GetAllPresensi(config.Ulbimongoconn, "presensi")
+// 	return c.JSON(ps)
+// }
 
 // GetPresensiID godoc
 // @Summary Get By ID Data Presensi.
@@ -185,7 +185,212 @@ func GetAllPresensi(c *fiber.Ctx) error {
 // @Failure 404
 // @Failure 500
 // @Router /presensi/{id} [get]
-func GetPresensiID(c *fiber.Ctx) error {
+// func GetPresensiID(c *fiber.Ctx) error {
+// 	id := c.Params("id")
+// 	if id == "" {
+// 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+// 			"status":  http.StatusInternalServerError,
+// 			"message": "Wrong parameter",
+// 		})
+// 	}
+// 	objID, err := primitive.ObjectIDFromHex(id)
+// 	if err != nil {
+// 		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
+// 			"status":  http.StatusBadRequest,
+// 			"message": "Invalid id parameter",
+// 		})
+// 	}
+// 	ps, err := inimodullatihan.GetPresensiFromID(objID, config.Ulbimongoconn, "presensi")
+// 	if err != nil {
+// 		if errors.Is(err, mongo.ErrNoDocuments) {
+// 			return c.Status(http.StatusNotFound).JSON(fiber.Map{
+// 				"status":  http.StatusNotFound,
+// 				"message": fmt.Sprintf("No data found for id %s", id),
+// 			})
+// 		}
+// 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+// 			"status":  http.StatusInternalServerError,
+// 			"message": fmt.Sprintf("Error retrieving data for id %s", id),
+// 		})
+// 	}
+// 	return c.JSON(ps)
+// }
+
+// func GetAllKuesioner(c *fiber.Ctx) error {
+// 	ps := inimodule.GetAllKuesioner(config.Ulbimongoconn, "kuesioner")
+// 	return c.JSON(ps)
+// }
+
+// InsertData godoc
+// @Summary Insert data presensi.
+// @Description Input data presensi.
+// @Tags Presensi
+// @Accept json
+// @Produce json
+// @Param request body Presensi true "Payload Body [RAW]"
+// @Success 200 {object} Presensi
+// @Failure 400
+// @Failure 500
+// @Router /ins [post]
+// func InsertData(c *fiber.Ctx) error {
+// 	db := config.Ulbimongoconn
+// 	var presensi tuhmodelloh.Presensi
+// 	if err := c.BodyParser(&presensi); err != nil {
+// 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+// 			"status":  http.StatusInternalServerError,
+// 			"message": err.Error(),
+// 		})
+// 	}
+// 	insertedID, err := tuhmoduleloh.InsertPresensi(db, "presensi",
+// 		presensi.Longitude,
+// 		presensi.Latitude,
+// 		presensi.Location,
+// 		presensi.Phone_number,
+// 		presensi.Checkin,
+// 		presensi.Biodata)
+// 	if err != nil {
+// 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+// 			"status":  http.StatusInternalServerError,
+// 			"message": err.Error(),
+// 		})
+// 	}
+// 	return c.Status(http.StatusOK).JSON(fiber.Map{
+// 		"status":      http.StatusOK,
+// 		"message":     "Data berhasil disimpan.",
+// 		"inserted_id": insertedID,
+// 	})
+// }
+
+// UpdateData godoc
+// @Summary Update data presensi.
+// @Description Ubah data presensi.
+// @Tags Presensi
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Param request body Presensi true "Payload Body [RAW]"
+// @Success 200 {object} Presensi
+// @Failure 400
+// @Failure 500
+// @Router /upd/{id} [put]
+// func UpdateData(c *fiber.Ctx) error {
+// 	db := config.Ulbimongoconn
+
+// 	// Get the ID from the URL parameter
+// 	id := c.Params("id")
+
+// 	// Parse the ID into an ObjectID
+// 	objectID, err := primitive.ObjectIDFromHex(id)
+// 	if err != nil {
+// 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+// 			"status":  http.StatusInternalServerError,
+// 			"message": err.Error(),
+// 		})
+// 	}
+
+// 	// Parse the request body into a Presensi object
+// 	var presensi tuhmodelloh.Presensi
+// 	if err := c.BodyParser(&presensi); err != nil {
+// 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+// 			"status":  http.StatusInternalServerError,
+// 			"message": err.Error(),
+// 		})
+// 	}
+
+// 	// Call the UpdatePresensi function with the parsed ID and the Presensi object
+// 	err = tuhmoduleloh.UpdatePresensi(db, "presensi",
+// 		objectID,
+// 		presensi.Longitude,
+// 		presensi.Latitude,
+// 		presensi.Location,
+// 		presensi.Phone_number,
+// 		presensi.Checkin,
+// 		presensi.Biodata)
+// 	if err != nil {
+// 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+// 			"status":  http.StatusInternalServerError,
+// 			"message": err.Error(),
+// 		})
+// 	}
+
+// 	return c.Status(http.StatusOK).JSON(fiber.Map{
+// 		"status":  http.StatusOK,
+// 		"message": "Data successfully updated",
+// 	})
+// }
+
+// DeletePresensiByID godoc
+// @Summary Delete data presensi.
+// @Description Hapus data presensi.
+// @Tags Presensi
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Success 200
+// @Failure 400
+// @Failure 500
+// @Router /delete/{id} [delete]
+// func DeletePresensiByID(c *fiber.Ctx) error {
+// 	id := c.Params("id")
+// 	if id == "" {
+// 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+// 			"status":  http.StatusInternalServerError,
+// 			"message": "Wrong parameter",
+// 		})
+// 	}
+
+// 	objID, err := primitive.ObjectIDFromHex(id)
+// 	if err != nil {
+// 		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
+// 			"status":  http.StatusBadRequest,
+// 			"message": "Invalid id parameter",
+// 		})
+// 	}
+
+// 	err = tuhmoduleloh.DeletePresensiByID(objID, config.Ulbimongoconn, "presensi")
+// 	if err != nil {
+// 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
+// 			"status":  http.StatusInternalServerError,
+// 			"message": fmt.Sprintf("Error deleting data for id %s", id),
+// 		})
+// 	}
+
+// 	return c.Status(http.StatusOK).JSON(fiber.Map{
+// 		"status":  http.StatusOK,
+// 		"message": fmt.Sprintf("Data with id %s deleted successfully", id),
+// 	})
+// }
+
+
+
+//TUGASBESAR
+
+// GetAllKuesioner godoc
+// @Summary Get All Data Kuesioner.
+// @Description Mengambil semua data kuesioner.
+// @Tags Kuesioner
+// @Accept json
+// @Produce json
+// @Success 200 {object} Kuesioner
+// @Router /kuesioner [get]
+func GetAllKuesioner(c *fiber.Ctx) error {
+	ps := inimodule.GetAllKuesioner(config.Ulbimongoconn, "kuesioner")
+	return c.JSON(ps)
+}
+
+// GetKuesionerID godoc
+// @Summary Get By ID Data Kuesioner.
+// @Description Ambil per ID data kuesioner.
+// @Tags Kuesioner
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Success 200 {object} Kuesioner
+// @Failure 400
+// @Failure 404
+// @Failure 500
+// @Router /kuesioner/{id} [get]
+func GetKuesionerID(c *fiber.Ctx) error {
 	id := c.Params("id")
 	if id == "" {
 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
@@ -200,7 +405,7 @@ func GetPresensiID(c *fiber.Ctx) error {
 			"message": "Invalid id parameter",
 		})
 	}
-	ps, err := inimodullatihan.GetPresensiFromID(objID, config.Ulbimongoconn, "presensi")
+	ps, err := inimodule.GetKuesionerFromID(objID, config.Ulbimongoconn, "kuesioner")
 	if err != nil {
 		if errors.Is(err, mongo.ErrNoDocuments) {
 			return c.Status(http.StatusNotFound).JSON(fiber.Map{
@@ -216,180 +421,17 @@ func GetPresensiID(c *fiber.Ctx) error {
 	return c.JSON(ps)
 }
 
-func GetAllKuesioner(c *fiber.Ctx) error {
-	ps := inimodule.GetAllKuesioner(config.Ulbimongoconn, "kuesioner")
-	return c.JSON(ps)
-}
-
-// InsertData godoc
-// @Summary Insert data presensi.
-// @Description Input data presensi.
-// @Tags Presensi
+// InsertDataKuesioner godoc
+// @Summary Insert data kuesioner.
+// @Description Input data kuesioner.
+// @Tags Kuesioner
 // @Accept json
 // @Produce json
-// @Param request body Presensi true "Payload Body [RAW]"
-// @Success 200 {object} Presensi
+// @Param request body Kuesioner true "Payload Body [RAW]"
+// @Success 200 {object} Kuesioner
 // @Failure 400
 // @Failure 500
-// @Router /ins [post]
-func InsertData(c *fiber.Ctx) error {
-	db := config.Ulbimongoconn
-	var presensi tuhmodelloh.Presensi
-	if err := c.BodyParser(&presensi); err != nil {
-		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
-			"status":  http.StatusInternalServerError,
-			"message": err.Error(),
-		})
-	}
-	insertedID, err := tuhmoduleloh.InsertPresensi(db, "presensi",
-		presensi.Longitude,
-		presensi.Latitude,
-		presensi.Location,
-		presensi.Phone_number,
-		presensi.Checkin,
-		presensi.Biodata)
-	if err != nil {
-		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
-			"status":  http.StatusInternalServerError,
-			"message": err.Error(),
-		})
-	}
-	return c.Status(http.StatusOK).JSON(fiber.Map{
-		"status":      http.StatusOK,
-		"message":     "Data berhasil disimpan.",
-		"inserted_id": insertedID,
-	})
-}
-
-// UpdateData godoc
-// @Summary Update data presensi.
-// @Description Ubah data presensi.
-// @Tags Presensi
-// @Accept json
-// @Produce json
-// @Param id path string true "Masukan ID"
-// @Param request body Presensi true "Payload Body [RAW]"
-// @Success 200 {object} Presensi
-// @Failure 400
-// @Failure 500
-// @Router /upd/{id} [put]
-func UpdateData(c *fiber.Ctx) error {
-	db := config.Ulbimongoconn
-
-	// Get the ID from the URL parameter
-	id := c.Params("id")
-
-	// Parse the ID into an ObjectID
-	objectID, err := primitive.ObjectIDFromHex(id)
-	if err != nil {
-		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
-			"status":  http.StatusInternalServerError,
-			"message": err.Error(),
-		})
-	}
-
-	// Parse the request body into a Presensi object
-	var presensi tuhmodelloh.Presensi
-	if err := c.BodyParser(&presensi); err != nil {
-		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
-			"status":  http.StatusInternalServerError,
-			"message": err.Error(),
-		})
-	}
-
-	// Call the UpdatePresensi function with the parsed ID and the Presensi object
-	err = tuhmoduleloh.UpdatePresensi(db, "presensi",
-		objectID,
-		presensi.Longitude,
-		presensi.Latitude,
-		presensi.Location,
-		presensi.Phone_number,
-		presensi.Checkin,
-		presensi.Biodata)
-	if err != nil {
-		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
-			"status":  http.StatusInternalServerError,
-			"message": err.Error(),
-		})
-	}
-
-	return c.Status(http.StatusOK).JSON(fiber.Map{
-		"status":  http.StatusOK,
-		"message": "Data successfully updated",
-	})
-}
-
-// DeletePresensiByID godoc
-// @Summary Delete data presensi.
-// @Description Hapus data presensi.
-// @Tags Presensi
-// @Accept json
-// @Produce json
-// @Param id path string true "Masukan ID"
-// @Success 200
-// @Failure 400
-// @Failure 500
-// @Router /delete/{id} [delete]
-func DeletePresensiByID(c *fiber.Ctx) error {
-	id := c.Params("id")
-	if id == "" {
-		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
-			"status":  http.StatusInternalServerError,
-			"message": "Wrong parameter",
-		})
-	}
-
-	objID, err := primitive.ObjectIDFromHex(id)
-	if err != nil {
-		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
-			"status":  http.StatusBadRequest,
-			"message": "Invalid id parameter",
-		})
-	}
-
-	err = tuhmoduleloh.DeletePresensiByID(objID, config.Ulbimongoconn, "presensi")
-	if err != nil {
-		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
-			"status":  http.StatusInternalServerError,
-			"message": fmt.Sprintf("Error deleting data for id %s", id),
-		})
-	}
-
-	return c.Status(http.StatusOK).JSON(fiber.Map{
-		"status":  http.StatusOK,
-		"message": fmt.Sprintf("Data with id %s deleted successfully", id),
-	})
-}
-
-// func InsertDataKuesioner2(c *fiber.Ctx) error {
-// 	db := config.Ulbimongoconn
-// 	var kuesioner inimodel.Kuesioner
-// 	if err := c.BodyParser(&kuesioner); err != nil {
-// 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
-// 			"status":  http.StatusInternalServerError,
-// 			"message": err.Error(),
-// 		})
-// 	}
-// 	insertedID, err := inimodule.InsertDataKuesioner2(db, "kuesioner",
-// 		kuesioner.Latitude,
-// 		kuesioner.Longitude,
-// 		kuesioner.Location,
-// 		kuesioner.Email,
-// 		kuesioner.Status,
-// 		kuesioner.Biodata)
-// 	if err != nil {
-// 		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
-// 			"status":  http.StatusInternalServerError,
-// 			"message": err.Error(),
-// 		})
-// 	}
-// 	return c.Status(http.StatusOK).JSON(fiber.Map{
-// 		"status":      http.StatusOK,
-// 		"message":     "Data berhasil disimpan.",
-// 		"inserted_id": insertedID,
-// 	})
-// }
-
+// @Router /ins1 [post]
 func InsertDataKuesioner(c *fiber.Ctx) error {
 	db := config.Ulbimongoconn
 	var kuesioner inimodel.Kuesioner
@@ -416,6 +458,18 @@ func InsertDataKuesioner(c *fiber.Ctx) error {
 	})
 }
 
+// UpdateDataK godoc
+// @Summary Update data kuesioner.
+// @Description Ubah data kuesioner.
+// @Tags Kuesioner
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Param request body Kuesioner true "Payload Body [RAW]"
+// @Success 200 {object} Kuesioner
+// @Failure 400
+// @Failure 500
+// @Router /update/{id} [put]
 func UpdateDataK(c *fiber.Ctx) error {
 	db := config.Ulbimongoconn
 
@@ -462,6 +516,17 @@ func UpdateDataK(c *fiber.Ctx) error {
 	})
 }
 
+// DeleteKuesionerByID godoc
+// @Summary Delete data kuesioner.
+// @Description Hapus data kuesioner.
+// @Tags Kuesioner
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Success 200
+// @Failure 400
+// @Failure 500
+// @Router /dlt/{id} [delete]
 func DeleteKuesionerByID(c *fiber.Ctx) error {
 	id := c.Params("id")
 	if id == "" {
@@ -493,33 +558,5 @@ func DeleteKuesionerByID(c *fiber.Ctx) error {
 	})
 }
 
-func GetKuesionerID(c *fiber.Ctx) error {
-	id := c.Params("id")
-	if id == "" {
-		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
-			"status":  http.StatusInternalServerError,
-			"message": "Wrong parameter",
-		})
-	}
-	objID, err := primitive.ObjectIDFromHex(id)
-	if err != nil {
-		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
-			"status":  http.StatusBadRequest,
-			"message": "Invalid id parameter",
-		})
-	}
-	ps, err := inimodule.GetKuesionerFromID(objID, config.Ulbimongoconn, "kuesioner")
-	if err != nil {
-		if errors.Is(err, mongo.ErrNoDocuments) {
-			return c.Status(http.StatusNotFound).JSON(fiber.Map{
-				"status":  http.StatusNotFound,
-				"message": fmt.Sprintf("No data found for id %s", id),
-			})
-		}
-		return c.Status(http.StatusInternalServerError).JSON(fiber.Map{
-			"status":  http.StatusInternalServerError,
-			"message": fmt.Sprintf("Error retrieving data for id %s", id),
-		})
-	}
-	return c.JSON(ps)
-}
+
+
