# docs/swagger.yaml
@@ -1,75 +1,11 @@
 basePath: /
 definitions:
-  controller.JamKerja:
-    properties:
-      durasi:
-        example: 8
-        type: integer
-      gmt:
-        example: 7
-        type: integer
-      hari:
-        example:
-        - Senin
-        - Selasa
-        - Rabu
-        - Kamis
-        - Jumat
-        - Sabtu
-        - Minggu
-        items:
-          type: string
-        type: array
-      jam_keluar:
-        example: "16:00"
-        type: string
-      jam_masuk:
-        example: "08:00"
-        type: string
-      piket_tim:
-        example: Piket Z
-        type: string
-      shift:
-        example: 2
-        type: integer
-    type: object
-  controller.Karyawan:
-    properties:
-      hari_kerja:
-        example:
-        - Senin
-        - Selasa
-        - Rabu
-        - Kamis
-        - Jumat
-        - Sabtu
-        - Minggu
-        items:
-          type: string
-        type: array
-      jabatan:
-        example: Anonymous
-        type: string
-      jam_kerja:
-        items:
-          $ref: '#/definitions/controller.JamKerja'
-        type: array
-      nama:
-        description: ID          primitive.ObjectID `bson:"_id,omitempty" json:"_id,omitempty"
-          example:"123456789231564783921347"`
-        example: Tes Swagger
-        type: string
-      phone_number:
-        example: "08123456789"
-        type: string
-    type: object
-  controller.Presensi:
+  controller.Kuesioner:
     properties:
       biodata:
-        $ref: '#/definitions/controller.Karyawan'
-      checkin:
-        description: Datetime     primitive.DateTime `bson:"datetime,omitempty" json:"datetime,omitempty"`
-        example: MASUK
+        $ref: '#/definitions/controller.Responden'
+      email:
+        example: jasmine@gmail.com
         type: string
       latitude:
         example: 123.11
@@ -78,13 +14,32 @@ definitions:
         example: Bandung
         type: string
       longitude:
-        description: ID           primitive.ObjectID `bson:"_id,omitempty" json:"_id,omitempty"
-          example:"123456789231564783921347"`
+        description: ID           primitive.ObjectID `bson:"_id,omitempty" json:"_id,omitempty"`
         example: 123.11
         type: number
-      phone_number:
-        example: "08123456789"
+      status:
+        description: Datetime     primitive.DateTime `bson:"datetime,omitempty" json:"datetime,omitempty"`
+        example: Done
         type: string
+    type: object
+  controller.Responden:
+    properties:
+      email:
+        example: jasmine@gmail.com
+        type: string
+      jenis_kelamin:
+        example: Prempuan
+        type: string
+      nama:
+        description: ID               primitive.ObjectID `bson:"_id,omitempty" json:"_id,omitempty"`
+        example: Jasmine
+        type: string
+      phone_number:
+        example: "081243284212"
+        type: string
+      usia:
+        example: 18
+        type: integer
     type: object
 host: jaehyun.herokuapp.com
 info:
@@ -96,11 +51,11 @@ info:
   title: TES SWAG
   version: "1.0"
 paths:
-  /delete/{id}:
+  /dlt/{id}:
     delete:
       consumes:
       - application/json
-      description: Hapus data presensi.
+      description: Hapus data kuesioner.
       parameters:
       - description: Masukan ID
         in: path
@@ -116,55 +71,55 @@ paths:
           description: Bad Request
         "500":
           description: Internal Server Error
-      summary: Delete data presensi.
+      summary: Delete data kuesioner.
       tags:
-      - Presensi
-  /ins:
+      - Kuesioner
+  /ins1:
     post:
       consumes:
       - application/json
-      description: Input data presensi.
+      description: Input data kuesioner.
       parameters:
       - description: Payload Body [RAW]
         in: body
         name: request
         required: true
         schema:
-          $ref: '#/definitions/controller.Presensi'
+          $ref: '#/definitions/controller.Kuesioner'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Presensi'
+            $ref: '#/definitions/controller.Kuesioner'
         "400":
           description: Bad Request
         "500":
           description: Internal Server Error
-      summary: Insert data presensi.
+      summary: Insert data kuesioner.
       tags:
-      - Presensi
-  /presensi:
+      - Kuesioner
+  /kuesioner:
     get:
       consumes:
       - application/json
-      description: Mengambil semua data presensi.
+      description: Mengambil semua data kuesioner.
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Presensi'
-      summary: Get All Data Presensi.
+            $ref: '#/definitions/controller.Kuesioner'
+      summary: Get All Data Kuesioner.
       tags:
-      - Presensi
-  /presensi/{id}:
+      - Kuesioner
+  /kuesioner/{id}:
     get:
       consumes:
       - application/json
-      description: Ambil per ID data presensi.
+      description: Ambil per ID data kuesioner.
       parameters:
       - description: Masukan ID
         in: path
@@ -177,21 +132,21 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Presensi'
+            $ref: '#/definitions/controller.Kuesioner'
         "400":
           description: Bad Request
         "404":
           description: Not Found
         "500":
           description: Internal Server Error
-      summary: Get By ID Data Presensi.
+      summary: Get By ID Data Kuesioner.
       tags:
-      - Presensi
-  /upd/{id}:
+      - Kuesioner
+  /update/{id}:
     put:
       consumes:
       - application/json
-      description: Ubah data presensi.
+      description: Ubah data kuesioner.
       parameters:
       - description: Masukan ID
         in: path
@@ -203,21 +158,21 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/controller.Presensi'
+          $ref: '#/definitions/controller.Kuesioner'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/controller.Presensi'
+            $ref: '#/definitions/controller.Kuesioner'
         "400":
           description: Bad Request
         "500":
           description: Internal Server Error
-      summary: Update data presensi.
+      summary: Update data kuesioner.
       tags:
-      - Presensi
+      - Kuesioner
 schemes:
 - https
 - http
